--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -3,13 +3,13 @@
 <div class="ui compact segment container">
     {{#error}}
     <div class="ui negative message">
-        <div class="header" id="message">
+        <div class="header" id="negativeMessage">
             {{ message }}
         </div>
     </div>
     {{/error}} {{^error}}
     <div class="ui positive message">
-        <div class="header" id="message">
+        <div class="header" id="positiveMessage">
             {{ message }}
         </div>
     </div>
