--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Nitflex</title>
+    <title>Main</title>
     <base href=".">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://rawgit.com/Semantic-Org/Semantic-UI/next/dist/semantic.css">
-    <link rel="stylesheet" href="/css/style.css" </head>
+    <link rel="stylesheet" href="/css/style.css"></head>
 
     <!-- 3. Display the application -->
 
@@ -14,3 +14,4 @@
         <div>
             <div class="ui grid">
                 <a href="/" class="row" id="logo-img"><img class="ui image" src="/images/logo.png"></a>
+
